--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,7 @@ jobs:
 
     - name: Test
       run: go test -cover -v
+
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v1.1.2
+
